syntax = "proto3";

package pb;

option go_package = "./__";

service Greeter {
  rpc SayHelloAgain(HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
